# elf-edit

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.ghc-9.10.1.config  cabal.ghc-9.12.2.config  cabal.ghc-9.14.1.config  cabal.ghc-9.6.7.config  cabal.ghc-9.8.4.config  cabal.project.freeze.ghc-8.10.4  cabal.project.freeze.ghc-8.10.7  cabal.project.freeze.ghc-8.8.4  cabal.project.freeze.ghc-9.0.1  cabal.project.freeze.ghc-9.0.2  cabal.project.freeze.ghc-9.10.1  cabal.project.freeze.ghc-9.2.2  cabal.project.freeze.ghc-9.2.8  cabal.project.freeze.ghc-9.4.5  cabal.project.freeze.ghc-9.6.2  cabal.project.ghc-8.8.4.freeze  cabal.project.werror  elf-edit.cabal  elf-galois.cabal  elf.cabal  stack-7.10.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack.yaml
.github/: update-freeze
.github/workflows/: ci.yaml
notes/: .gitignore  linux_loading.md
src/Data/: Elf.hs  ElfEdit.hs
src/Data/Binary/Builder/: Sized.hs
src/Data/Elf/: DynamicArrayTag.hs  Enums.hs  Get.hs  Layout.hs  Lexer.x  Parser.y  Relocations.hs  SizedBuilder.hs  TH.hs  Types.hs
src/Data/ElfEdit/: ByteString.hs  Dynamic.hs  DynamicArrayTag.hs  Enums.hs  Get.hs  Layout.hs  Prim.hs  Relocations.hs  Sections.hs  ShdrEntry.hs  SymbolEnums.hs  Types.hs  Utils.hs  VirtAddrMap.hs
src/Data/ElfEdit/Dynamic/: Tag.hs
src/Data/ElfEdit/HighLevel/: GOT.hs  Get.hs  Layout.hs  Sections.hs  Types.hs
src/Data/ElfEdit/Prim/: Ehdr.hs  File.hs  HeaderInfo.hs  Phdr.hs  Shdr.hs  StringTable.hs  SymbolTable.hs
src/Data/ElfEdit/Relocations/: AARCH64.hs  AArch64.hs  ARM32.hs  ARM64.hs  Android.hs  Common.hs  I386.hs  PPC32.hs  PPC64.hs  RISCV.hs  X86_64.hs
tests/: Makefile  Relocations.hs  Test.hs  fmax.c  fmax.elf  misaligned_bss.elf  ppc32-relocs.elf  ppc64-relocs.elf  riscv32-relocs.elf  riscv64-relocs.elf  simple.elf  simple.static.elf  symbol_versions.c  symbol_versions.map  zero-physical-bss.elf
tests/relocs/: Makefile
tests/relocs/aarch64/: relocs.o.relocs  relocs.s
tests/relocs/arm32/: relocs.o.relocs  relocs.s
tests/relocs/ppc32/: relocs.o.relocs  relocs.s
tests/relocs/ppc64/: relocs.o.relocs  relocs.s
tests/relocs/riscv/: relocs.s
tests/relocs/x86_64/: relocs.o.relocs  relocs.s
