Name:          elf-edit
Version:       0.35
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Galois, Inc and Erik Charlebois
Maintainer:    Joe Hendrix <jhendrix@galois.com>
Stability:     unstable
Cabal-Version: >= 1.8
Homepage:      https://github.com/GaloisInc/elf-edit
Build-Type:    Simple
Synopsis:      Datatype for ELF files with serialization and deserialization.
Data-Files:    tests/empty.elf tests/Test.hs

extra-source-files:
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/GaloisInc/elf-edit.git

library
  build-depends:
    base >= 4.11 && < 5,
    ansi-wl-pprint,
    binary,
    bytestring,
    containers,
    lens,
    mtl,
    utf8-string,
    vector
  ghc-options : -Wall
  hs-source-dirs:  src
  exposed-modules:
    Data.ElfEdit
  other-modules:
    Data.ElfEdit.Dynamic
    Data.ElfEdit.Dynamic.Tag
    Data.ElfEdit.Enums
    Data.ElfEdit.Get
    Data.ElfEdit.Layout
    Data.ElfEdit.Relocations
    Data.ElfEdit.Relocations.Android
    Data.ElfEdit.Relocations.ARM32
    Data.ElfEdit.Relocations.ARM64
    Data.ElfEdit.Relocations.I386
    Data.ElfEdit.Relocations.X86_64
    Data.ElfEdit.Sections
    Data.ElfEdit.SymbolEnums
    Data.ElfEdit.Types
    Data.ElfEdit.Utils

test-suite test-elf
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wall
  hs-source-dirs: tests
  build-depends:
    base,
    bytestring,
    containers,
    elf-edit,
    tasty,
    tasty-hunit >= 0.10,
    tasty-quickcheck,
    vector