Name:          elf-edit
Version:       0.40
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Galois, Inc and Erik Charlebois
Maintainer:    Joe Hendrix <jhendrix@galois.com>
Stability:     unstable
Cabal-Version: >= 1.8
Homepage:      https://github.com/GaloisInc/elf-edit
Build-Type:    Simple
Synopsis:      Datatype for ELF files with serialization and deserialization.
Data-Files:    tests/empty.elf tests/Test.hs

extra-source-files:
  ChangeLog.md

source-repository head
  type: git
  location: https://github.com/GaloisInc/elf-edit.git

library
  build-depends:
    base >= 4.11 && < 5,
    binary,
    bytestring,
    containers,
    lens,
    mtl,
    prettyprinter >= 1.7.0,
    utf8-string,
    vector
  ghc-options : -Wall
  hs-source-dirs:  src
  exposed-modules:
    Data.ElfEdit
    Data.ElfEdit.ByteString
    Data.ElfEdit.Prim
  other-modules:
    Data.ElfEdit.Dynamic
    Data.ElfEdit.Dynamic.Tag
    Data.ElfEdit.HighLevel.Get
    Data.ElfEdit.HighLevel.GOT
    Data.ElfEdit.HighLevel.Layout
    Data.ElfEdit.HighLevel.Sections
    Data.ElfEdit.HighLevel.Types
    Data.ElfEdit.Relocations.Common
    Data.ElfEdit.Relocations.Android
    Data.ElfEdit.Relocations.ARM32
    Data.ElfEdit.Relocations.AArch64
    Data.ElfEdit.Relocations.I386
    Data.ElfEdit.Relocations.PPC32
    Data.ElfEdit.Relocations.PPC64
    Data.ElfEdit.Relocations.X86_64
    Data.ElfEdit.Prim.Ehdr
    Data.ElfEdit.Prim.File
    Data.ElfEdit.Prim.HeaderInfo
    Data.ElfEdit.Prim.Phdr
    Data.ElfEdit.Prim.Shdr
    Data.ElfEdit.Prim.StringTable
    Data.ElfEdit.Prim.SymbolTable
    Data.ElfEdit.Utils

test-suite test-elf
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wall
  hs-source-dirs: tests
  build-depends:
    base,
    bytestring,
    containers,
    elf-edit,
    tasty,
    tasty-hunit >= 0.10,
    tasty-quickcheck,
    vector
