Name:          elf-galois
Version:       0.28
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Galois, Inc and Erik Charlebois
Copyright:     Galois, Inc and Erik Charlebois
Maintainer:    Joe Hendrix <jhendrix@galois.com>
Stability:     unstable
Cabal-Version: >= 1.8
Homepage:      http://github.com/GaloisInc/elf
Build-Type:    Simple
Synopsis:      Parser for ELF object format.
Description:   Parser for ELF object format.
Data-Files:    tests/empty.elf tests/Test.hs

library
  build-depends:
    base >= 2 && < 5,
    ansi-wl-pprint,
    array,
    binary >= 0.6.0.0,
    bytestring,
    containers,
    lens,
    template-haskell,
    utf8-string,
    vector
  build-tools:
    alex>= 3.0,
    happy
  ghc-options : -Wall
  hs-source-dirs:  src
  exposed-modules:
    Data.Elf
  other-modules:
    Data.Elf.Layout
    Data.Elf.Lexer
    Data.Elf.Parser
    Data.Elf.SizedBuilder
    Data.Elf.TH
    Data.Elf.Types

test-suite test-elf
  type: exitcode-stdio-1.0
  main-is: tests/Test.hs
  build-depends:
    base,
    bytestring,
    elf,
    HUnit