Name:          elf
Version:       0.27
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Erik Charlebois
Copyright:     Erik Charlebois
Maintainer:    Erik Charlebois <erikcharlebois@gmail.com>
Stability:     unstable
Cabal-Version: >= 1.6
Homepage:      http://github.com/erikcharlebois/elf
Build-Depends: base
Build-Type:    Custom
Synopsis:      Parser for ELF object format.
Description:   Parser for ELF object format.
Data-Files:    tests/empty.elf tests/Test.hs

source-repository head
  type:     git
  location: http://github.com/erikcharlebois/elf

library
    build-depends:
      array,
      base >= 2 && < 5,
      bytestring,
      binary >= 0.6.0.0,
      containers,
      template-haskell,
      utf8-string,
      vector
    build-tools:
      alex>= 3.0
    ghc-options : -Wall
    hs-source-dirs:  src
    exposed-modules: Data.Elf
    other-modules:
      Data.Elf.Lexer
      Data.Elf.Parser
      Data.Elf.TH
      Data.Binary.Builder.Sized