Name:          elf
Version:       0.28
License:       BSD3
License-file:  LICENSE
Category:      Data
Author:        Erik Charlebois
Copyright:     Erik Charlebois
Maintainer:    Erik Charlebois <erikcharlebois@gmail.com>
Stability:     unstable
Cabal-Version: >= 1.8
Homepage:      http://github.com/erikcharlebois/elf
Build-Type:    Simple
Synopsis:      Parser for ELF object format.
Description:   Parser for ELF object format.
Data-Files:    tests/empty.elf tests/Test.hs

source-repository head
  type:     git
  location: http://github.com/erikcharlebois/elf

library
  build-depends:
    base >= 2 && < 5,
    ansi-wl-pprint,
    array,
    binary >= 0.6.0.0,
    bytestring,
    containers,
    lens,
    template-haskell,
    utf8-string,
    vector
  build-tools:
    alex>= 3.0,
    happy
  ghc-options : -Wall
  hs-source-dirs:  src
  exposed-modules: Data.Elf
  other-modules:
    Data.Elf.Lexer
    Data.Elf.Parser
    Data.Elf.SizedBuilder
    Data.Elf.TH

test-suite test-elf
  type: exitcode-stdio-1.0
  main-is: tests/Test.hs
  build-depends:
    base,
    bytestring,
    elf,
    HUnit